--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include 'desktop', 'android', 'ios', 'html', 'core'
+include 'desktop', 'android', 'ios', 'html', 'core', ':android_gradle_lib'
+include ':openCVLibraryOPENCV_VERSION'
